--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ h1, h2, ul, p {
   text-align: center;
 }
 
-a[href="https://atlantabg.org/"] {
+.abg_link {
   text-align: center;
   position: relative;
 }
