--- a/index.css
+++ b/index.css
@@ -32,4 +32,6 @@ h1, h2, ul, p {
   font-weight: 900;
   font-size: 30px;
   display: inline-block;
+  justify-items: center;
+  justify-content: center;
 }
